# s-deed

./: .gitignore  README.md  STRUCTURE.md  config.yaml  environment.py  estimator.py  noise_model.py  notify.py  pipeline.py  pyproject.toml  requirements.txt  utils.py
.github/workflows/: ci.yml  mattermost-notify.yml  mattermost.yml
architecture/: README.md  lln_excel_subs_2026-5-23_7964606.xlsx
configs/: base.yaml
experiments/analysis/: plot_utils.py
literature/: README.md  RESEARCH_LOG.md
literature/papers/: -D27DM8VN.md  Safe-Navigation-in-Uncertain-Crowded-Environments-Using-Risk-Adaptive-CVaR-Barrier-Functions-NEWZKH9S.md
scripts/: build_summary.py  config_generator.py  run_experiment.py
src/: batch_runner.py  environment.py  estimator.py  main.py  noise_model.py  simulation.py  utils.py
tests/: test_environment.py  test_integration.py  test_noise_model.py
